--- a/home.html
+++ b/home.html
@@ -17,19 +17,19 @@
 	  <div class="collapse navbar-collapse" id="navbarText">
 		<ul class="navbar-nav ml-auto">
 		  <li class="nav-item active">
-			<a class="nav-link" href="/Quiz1/">Home<span class="sr-only">(current)</span></a>
+			<a class="nav-link" href="home.html">Home<span class="sr-only">(current)</span></a>
 		  </li>
 		  <li class="nav-item">
-			<a class="nav-link" href="/Quiz1/profile/">Profile</a>
+			<a class="nav-link" href="profile/profile.html">Profile</a>
 		  </li>
 		  <li class="nav-item">
-			<a class="nav-link" href="/Quiz1/hometown/">Hometown</a>
+			<a class="nav-link" href="hometown/hometown.html">Hometown</a>
 		  </li>
 		  <li class="nav-item">
-			<a class="nav-link" href="/Quiz1/food/">Food</a>
+			<a class="nav-link" href="food/food.html">Food</a>
 		  </li>
 		  <li class="nav-item">
-			<a class="nav-link" href="/Quiz1/tourist/">Tourist</a>
+			<a class="nav-link" href="tourist/tourist.html">Tourist</a>
 		  </li>
 		</ul>
 	  </div>
