--- a/tourist/tourist.html
+++ b/tourist/tourist.html
@@ -18,19 +18,19 @@
 	  <div class="collapse navbar-collapse" id="navbarText">
 		<ul class="navbar-nav ml-auto">
 		  <li class="nav-item">
-			<a class="nav-link" href="/quiz1/">Home</a>
+			<a class="nav-link" href="../home.html">Home</a>
 		  </li>
 		  <li class="nav-item">
-			<a class="nav-link" href="/quiz1/profile/">Profile</a>
+			<a class="nav-link" href="../profile/profile.html">Profile</a>
 		  </li>
 		  <li class="nav-item">
-			<a class="nav-link" href="/quiz1/hometown/">Hometown</a>
+			<a class="nav-link" href="../hometown/hometown.html">Hometown</a>
 		  </li>
 		  <li class="nav-item">
-			<a class="nav-link" href="/quiz1/food/">Food</a>
+			<a class="nav-link" href="../food/food.html">Food</a>
 		  </li>
 		  <li class="nav-item active">
-			<a class="nav-link" href="/quiz1/tourist/">Tourist<span class="sr-only">(current)</span></a>
+			<a class="nav-link" href="tourist.html">Tourist<span class="sr-only">(current)</span></a>
 		  </li>
 		</ul>
 	  </div>
